--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,17 @@
 <h2 id="title">Welcome to Ember</h2>
 
+
+<Box @panDirection={{6}}>
+    horizontal
+</Box>
+
+<Box @panDirection={{24}}>
+    vertical
+</Box>
+
+<Box @panDirection={{30}}>
+    all
+</Box>
+
+
 {{outlet}}
