--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,5 @@
-<h2 id="title">Welcome to Ember</h2>
-
+{{page-title "Dummy"}}
+<h2 id="title">Welcome to draggable modifier demo</h2>
 
 <Box @panDirection={{6}}>
     horizontal
@@ -12,6 +12,5 @@
 <Box @panDirection={{30}}>
     all
 </Box>
-
 
 {{outlet}}
