chore: pkges version update

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,15 +1,15 @@
 {{page-title "Dummy"}}
 <h2 id="title">Welcome to draggable modifier demo</h2>
 
-<Box @panDirection={{6}}>
+<Box @panDirection={{this.DIRECTION_HORIZONTAL}}>
     horizontal
 </Box>
 
-<Box @panDirection={{24}}>
+<Box @panDirection={{this.DIRECTION_VERTICAL}}>
     vertical
 </Box>
 
-<Box @panDirection={{30}}>
+<Box @panDirection={{this.DIRECTION_ALL}}>
     all
 </Box>
 
